// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InlineError 渲染快照 > 401 unauthorized：请先登录 + 登录入口 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    请先登录以查看
    <a
      class="ml-1 underline hover:text-accent"
      href="#/login"
    >
      登录
    </a>
  </div>
</DocumentFragment>
`;

exports[`InlineError 渲染快照 > 403：用户前端无管理员角色概念，归为会话失效（请先登录 + 登录入口） 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    请先登录以查看
    <a
      class="ml-1 underline hover:text-accent"
      href="#/login"
    >
      登录
    </a>
  </div>
</DocumentFragment>
`;

exports[`InlineError 渲染快照 > 自定义 failKey（如 bot.fail，带原始报错） 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    操作失败：boom
  </div>
</DocumentFragment>
`;

exports[`InlineError 渲染快照 > 默认加载失败（common.loadError，带原始报错） 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    加载失败：network down
  </div>
</DocumentFragment>
`;
